Use the *.valueOf() factory methods for speed. Fix some sloppy generic usage. reduce broad Exception catching